[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emulator"
path = "src/main.rs"

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
pnet = "0.35"
ctrlc = "3.4"
libc = "0.2"
modular-bitfield-msb = "0.11.2"
once_cell = "1.19"
tokio = { version = "1.40.0", features = ["full"] }
socket2 = "0.5.7"
pretty-hex = "0.4"
lazy_static = "1.4"
ttl_cache = "0.5.1"
serde_json = "1.0.133"
chrono = "0.4.38"
bytes = "1.9.0"
rand = "0.8.5"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1